Fix paragraph overflow

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -88,7 +88,7 @@ h1 {
 }
 
 p {
-  word-break : break-all;
+  overflow: hidden;
 }
 
 nav {
